2003-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* locale/C.mgk: Eliminated the many "NotA" messages since they may
	all be considered forms of "ImproperImageHeader".  It is useful to
	provide the origin of such messages in case the wrong coder has
	been invoked, however, this is expensive to do via the message
	database since it explodes the number of messages.  The exception
	logging can help here.  Once the exception reports include the
	reporting entity, it will be more clear when the software
	misbehaves.
	* magick/error.h (ThrowReaderException2): Remove since no longer
	used.
	(ThrowReaderException): Simplified implementation so that
	ThrowException is not expanded twice.
	* magick/error.h (ThrowReaderException3): Remove since never used.
	* coders/xtrn.c (ReadXTRNImage): Use ThrowReaderException rather
	than ThrowReaderException2.
	* locale/C.mgk (MissingArgument) Updated to include %s so that the
	description field appears earlier in the message.
	* magick/error.c (DefaultErrorHandler): Added a hack to allow the
	'reason' member to include a %s so that it may specify the
	formating of the message.  Care should be taken to not over-use
	this hack.

2003-09-18  Lars Ruben Skyum  <lars.skyum@stibo.com>

	* coders/ps3.c: Major update of the PS3 coder. Now ascii85 encodes
	all binary data. Many printer spoolers don't like the binary
	data. The coder now creates much smaller files for bilevel, gray,
	and colormapped images. Compression and image type is now
	separated so they may be combined independently. Any alpha channel
	is separated into a separate mask so it's possible to mask
	bilevel, gray, colormapped, rgb, and CKYK images. You may also
	mask a JPEG compressed PS file for instance. Clipping masks
	created from a photoshop clipping path with -clip option is
	converted to a corresponding postscript clipping path.  New
	functions need comment headers.
	* magick/attribute.c: Added TracePSClippingPath for creating a