@@ -1,3 +1,7 @@
+2003-09-19  Lars Ruben Skyum  <lars.skyum@stibo.com>
+
+	* coders/ps3.c: Fixed warnings from Solaris compiler.
+
 2003-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* locale/C.mgk: Eliminated the many "NotA" messages since they may
